further progess, now on-events

--- a/index.html
+++ b/index.html
@@ -14,8 +14,24 @@
   <body>
     <h1 id="website_title">Erste Überschrift</h1>
 
-    <div id="test_div" class="bg_green">testeintrag</div>
+    <div id="test_div" class="bg_green">
+      <button onclick="klick()">
+        Background
+      </button>
+      </div>
     <input type="text" value="Quirin" id="input" />
+    <!-- Dropdown -->
+     <br>
+     <label for="elementSelect">Was aus/einblenden?</label>
+     <select id="elementSelect">
+      <option value="">-Choose-</option>
+      <option value="h1">h1</option>
+      <option value="h3">h3</option>
+      <option value="h4">h4</option>
+      <option value="p">p</option>
+      <option value="input">input</option>
+     </select>
+     
       <h3>Fortschritt meiner JS-Kentnisse</h3>
       <h4>Er folgt nicht ganz genau dem Plan nach der Software-Akademie</h4>
       <p id="Absatz" class="bellevue">
