--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <!-- <script src="./objects.js"></script> -->
     <!-- <script src="./strings.js"></script> -->
     <!-- <script src="./15exercises.js"></script> -->
+     <script src="./debugger.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="website_title">Erste Überschrift</h1>
+    <h1 id="website_tit">Erste Überschrift</h1>
 
     <div id="test_div" class="bg_green">
       <button onclick="klick()">
@@ -58,8 +59,10 @@
         Insgesammt also doch ein stetiger Fortschritt, seitdem ich 
         in Marokko bin und gerade trotz der Hitze und des Haschischdunstes.
     </p>
-    
-
+    <br><br>
+    <h1 id="website_title">Titel der Webseite</h1>
+    <button onclick="init(0)">Start Debugger Testing</button>
+    <p id="debugger_log"></p>
     <script src="./dom_manipulation.js"></script>
   </body>
 </html>
